--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "json-patch": "^0.7.0",
     "moment": "^2.22.0",
     "mysql2": "^1.5.3",
-    "next": "^6.0.0",
+    "next": "^6.0.3",
+    "next-page-transitions": "^1.0.0-alpha.2",
     "next-redux-wrapper": "^2.0.0-beta.4",
     "next-routes": "^1.4.1",
     "normalizr": "^3.2.4",
